k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-night
  namespace: default
  labels:
    app: movie-night
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie-night
  template:
    metadata:
      labels:
        app: movie-night
    spec:
      containers:
      - name: movie-night
        image: ghcr.io/erix/movie-night:build-12-sha-51cf3f0 # {"$imagepolicy": "flux-system:movie-night"}
        ports:
        - containerPort: 3000
          name: http
        volumeMounts:
        - name: data
          mountPath: /data
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /api/state
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /api/state
            port: 3000
          initialDelaySeconds: 20
          periodSeconds: 10
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: movie-night-pvc
